--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <h1>Bitzehs Unblocked Games</h1>
             <h2>This website contains some games</h2>
             <h3>You get the point go to the main websites :D</h3>
-            <a href="./about"><h2>More info here!</h2></a>
+            <a href="./about"><h2>More info here!</h2></a><br><br/>
+            <a herf="./Snake"><h2>Snake Game Here</h2></a>
         </div>
     </body>
 </html>
